# linux-sdl3

./: .gitignore  CMakeLists.txt  array.c  array.h  build.bat  build.sh  collision.c  collision.h  entity.c  entity.h  entity_card.c  entity_cell.c  entity_cursor.c  entity_grabbable.c  entity_grid.c  entity_hand.c  global.h  list.c  list.h  main.c  object.c  object.h  scene.c  scene.h  scene_main.c  scene_test.c  sprite.c  sprite.h  texture.c  texture.h  time.c  time.h  transform.c  transform.h  unittest.c  unittest.h  unittest_decl.h  usersprite.c  usersprite.h  vector.c  (+1 more)
dead/: array.c
debug/Debug/: game
